# Color-Gamut-Plotter-QtVer

./: .gitignore  CMakeLists.txt  README.md  constant_dataset.h  gamutplotterconfig.h.cmake  global_variables.h  imageformats.h  imageparsersc.cpp  imageparsersc.h  jxlreader.cpp  jxlreader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plot_typedefs.h  scatter2dchart.cpp  scatter2dchart.h  scatter3dchart.cpp  scatter3dchart.h  scatterdialog.cpp  scatterdialog.h  scatterdialog.ui
cmake/: FindLCMS2.cmake
src/: camera3dsettingdialog.cpp  camera3dsettingdialog.h  camera3dsettingdialog.ui  constant_dataset.h  custom3dchart.cpp  custom3dchart.h  gamutplotterconfig.h.cmake  helper_funcs.h  imageparsersc.cpp  imageparsersc.h  jxlreader.cpp  jxlwriter.cpp  jxlwriter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plot_typedefs.h  scatter2dchart.cpp  scatter2dchart.h  scatter3dchart.cpp  scatter3dchart.h  scatterdialog.cpp  scatterdialog.h  scatterdialog.ui  shaders_gl.h
